--- a/.github/workflows/django_test.yml
+++ b/.github/workflows/django_test.yml
@@ -21,6 +21,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.8'
+
+    - name: Print current directory
+      run: pwd
+
+    - name: List files in current directory
+      run: ls
+          
     - name: Navigate to Project Directory and Install Dependencies
       run: |
         cd backend/teme
