--- a/.github/workflows/django_test.yml
+++ b/.github/workflows/django_test.yml
@@ -29,8 +29,8 @@ jobs:
       run: ls
           
     - name: Navigate to Project Directory and Install Dependencies
-      run: |
-        cd backend/teme
+      run: cd backend/teme
+      
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
