--- a/.github/workflows/django_test.yml
+++ b/.github/workflows/django_test.yml
@@ -30,12 +30,10 @@ jobs:
       
     - name: Install Dependencies
       run: |
-        cd backend
-        cd teme
+        cd backend/teme
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        cd backend
-        cd teme
+        cd backend/teme
         python manage.py test
