--- a/back_end/teme/requirements.txt
+++ b/back_end/teme/requirements.txt
@@ -1,7 +1,33 @@
+appnope==0.1.4
 asgiref==3.8.1
+asttokens==2.4.1
+backcall==0.2.0
 backports.zoneinfo==0.2.1
+decorator==5.1.1
 Django==4.2.11
+django-cors-headers==4.3.1
+exceptiongroup==1.2.1
+executing==2.0.1
 gunicorn==22.0.0
+iniconfig==2.0.0
+ipdb==0.13.13
+ipython==8.12.3
+jedi==0.19.1
+matplotlib-inline==0.1.7
 packaging==24.0
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pluggy==1.5.0
+prompt-toolkit==3.0.43
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
+pytest==8.2.0
+six==1.16.0
 sqlparse==0.5.0
+stack-data==0.6.3
+tomli==2.0.1
+traitlets==5.14.3
 typing_extensions==4.11.0
+wcwidth==0.2.13
